# swagger.json
@@ -2,29 +2,16 @@
   "swagger": "2.0",
   "info": {
     "title": "Items API",
-    "description": "API for managing items and users",
+    "description": "API for managing items",
     "version": "1.0.0"
   },
   "host": "cse341-project2-1-x4n2.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
+
   ],
   "paths": {
-    "/": {
-      "get": {
-        "summary": "Welcome endpoint",
-        "description": "Returns Hello World",
-        "produces": [
-          "text/plain"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/items": {
       "get": {
         "summary": "Get all items",
@@ -220,203 +207,6 @@
       "delete": {
         "summary": "Delete an item by ID",
         "description": "Delete an existing item by ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "default": "1"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users": {
-      "get": {
-        "summary": "Get all users",
-        "description": "Retrieve all users",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "post": {
-        "summary": "Create a user",
-        "description": "Create a new user",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "required": [
-                "firstName",
-                "lastName",
-                "email",
-                "favoriteColor",
-                "birthday"
-              ],
-              "properties": {
-                "firstName": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "lastName": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "birthday": {
-                  "type": "string",
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/{id}": {
-      "get": {
-        "summary": "Get a user by ID",
-        "description": "Retrieve a single user by ID",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "default": "1"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "summary": "Update a user by ID",
-        "description": "Update an existing user by ID",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "default": "1"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "required": [
-                "firstName",
-                "lastName",
-                "email",
-                "favoriteColor",
-                "birthday"
-              ],
-              "properties": {
-                "firstName": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "lastName": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "birthday": {
-                  "type": "string",
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete a user by ID",
-        "description": "Delete an existing user by ID",
         "parameters": [
           {
             "name": "id",
